[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiops_alert_deduplication_engine"
version = "0.1.0"
description = "Collapse duplicate or derivative alerts to reduce operator fatigue."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
